Added docs for user login, register and logout
